# activation-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
spec/constitution/: mission.md  roadmap.md  tech-stack.md
spec/features/001-core-guardrail/: plan.md  spec.md  tasks.md
spec/features/002-openai-adapter/: plan.md  spec.md  tasks.md
spec/features/003-huggingface-adapter/: plan.md  spec.md  tasks.md
spec/features/004-vllm-adapter/: plan.md  spec.md  tasks.md
src/activation_guard/: __init__.py  cli.py  main.py  main.py.orig
src/activation_guard/adapters/: __init__.py  hf_adapter.py  openai_adapter.py  vllm_adapter.py
src/activation_guard/core/: __init__.py  dummy_extractor.py  extractor.py  guardrail.py
src/activation_guard/models/: __init__.py  requests.py
tests/: test_adapters.py  test_core.py  test_hf_adapter.py  test_vllm_adapter.py
